# doggie_workshop

./: LICENSE  README.md  bridge.py  pyproject.toml  requirements.txt  user_custom_layout.ini
src/doggie_lab/: __main__.py  ids.py
src/doggie_lab/car/: __init__.py  builder.py  car.py  proxy_bus.py
src/doggie_lab/common/: doors.py
src/doggie_lab/data/: custom_layout.ini
src/doggie_lab/ecus/: __init__.py  abs_ecu.py  central_ecu.py  cruise_control_ecu.py  doors_ecu.py  ecu.py  ecu_ui.py  immo_ecu.py  instrument_cluster_ecu.py  isotp_node.py  vin_ecu.py
src/doggie_lab/gui/: digital_display.py  gauge.py  instrument_cluster.py  window.py
src/doggie_lab/messages/: __init__.py  abs_message.py  central_ecu_message.py  cruise_control_message.py  doors_message.py  immo_message.py  instrument_cluster_messages.py  messages.py
